tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/errors.sumo.meso
Warning: Vehicle 'cali.6000.0' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.7000.0' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.12000.2' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.17000.3' is not allowed to depart on any lane of its first edge.
